elazando index y cambiando <title>

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página para el curso</title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet consectetur, 
+    adipisicing elit. Dolores aspernatur nisi r
+    epellendus iure. Tempora repellendus quidem 
+    neque in consequatur soluta veritatis nostrum, 
+    incidunt nulla cum rerum doloribus et qui quas.</p>
+    <a href="htps://youtube.com/soydalto"></a>
+    <script src="main.js"></script>
 </body>
 </html>
 
